--- a/index.html
+++ b/index.html
@@ -24,18 +24,47 @@
 
 <main>
 
-  <!-- ================= CARTÕES ================= -->
+  <!-- ================= CADASTRO DE CARTÕES ================= -->
   <section class="input-section">
     <h2>💳 Cadastro de Cartões</h2>
 
     <div class="form">
       <input id="cartaoNome" placeholder="Nome do cartão (ex: Nubank)">
-      <input id="cartaoFechamento" type="number" min="1" max="31" placeholder="Fechamento">
-      <input id="cartaoVencimento" type="number" min="1" max="31" placeholder="Vencimento">
+      <input id="cartaoFechamento" type="number" min="1" max="31" placeholder="Dia de fechamento">
+      <input id="cartaoVencimento" type="number" min="1" max="31" placeholder="Dia de vencimento">
       <button onclick="salvarCartao()">Salvar Cartão</button>
     </div>
 
     <ul id="listaCartoes"></ul>
+  </section>
+
+  <!-- ================= LANÇAMENTO NORMAL ================= -->
+  <section class="input-section">
+    <h2>➕ Lançamento Manual</h2>
+
+    <div class="form">
+      <select id="tipoLancamento">
+        <option value="Renda">Renda</option>
+        <option value="Gasto">Gasto</option>
+        <option value="Investimento">Investimento</option>
+        <option value="Saúde">Saúde</option>
+      </select>
+
+      <input id="categoriaLancamento" placeholder="Categoria">
+      <input id="descricaoLancamento" placeholder="Descrição">
+      <input id="valorLancamento" type="number" step="0.01" placeholder="Valor">
+
+      <button onclick="
+        salvarLancamentoNormal(
+          tipoLancamento.value,
+          categoriaLancamento.value,
+          descricaoLancamento.value,
+          +valorLancamento.value
+        )
+      ">
+        Salvar Lançamento
+      </button>
+    </div>
   </section>
 
   <!-- ================= COMPRA PARCELADA ================= -->
@@ -46,13 +75,22 @@
       <select id="compraCartao"></select>
       <input id="compraDescricao" placeholder="Descrição da compra">
       <input id="compraValor" type="number" placeholder="Valor total">
-      <input id="compraParcelas" type="number" placeholder="Parcelas">
-      <button onclick="registrarCompraParcelada(
-        compraCartao.value,
-        compraDescricao.value,
-        +compraValor.value,
-        +compraParcelas.value
-      )">Registrar Compra</button>
+      <input id="compraParcelas" type="number" placeholder="Qtd. parcelas">
+      <input id="compraMes" type="number" min="1" max="12" placeholder="Mês 1ª parcela">
+      <input id="compraAno" type="number" placeholder="Ano 1ª parcela">
+
+      <button onclick="
+        registrarCompraParcelada(
+          compraCartao.value,
+          compraDescricao.value,
+          +compraValor.value,
+          +compraParcelas.value,
+          +compraMes.value,
+          +compraAno.value
+        )
+      ">
+        Registrar Compra
+      </button>
     </div>
   </section>
 
@@ -62,10 +100,12 @@
       <h3>💼 Renda</h3>
       <p id="rendaEl">R$ 0,00</p>
     </div>
+
     <div class="card red">
       <h3>💸 Gastos</h3>
       <p id="gastosEl">R$ 0,00</p>
     </div>
+
     <div class="card blue">
       <h3>💰 Sobra</h3>
       <p id="sobraEl">R$ 0,00</p>
@@ -77,16 +117,24 @@
     <div class="chart-box">
       <canvas id="barChart" width="360" height="260"></canvas>
     </div>
+
     <div class="chart-box">
       <canvas id="pieChart" width="360" height="260"></canvas>
     </div>
   </section>
 
-  <!-- ================= DASHBOARD POR CARTÃO ================= -->
+  <!-- ================= DASHBOARD DE CARTÕES ================= -->
   <section class="input-section">
-    <h2>📊 Dashboard por Cartão</h2>
-    <select id="cartaoDashboard"></select>
-    <canvas id="cartaoChart" width="360" height="260"></canvas>
+    <h2>📊 Dashboard de Cartões</h2>
+    <select id="cartaoDashboard">
+      <option value="">Todos os cartões</option>
+    </select>
+
+    <div class="charts">
+      <div class="chart-box">
+        <canvas id="cartaoChart" width="360" height="260"></canvas>
+      </div>
+    </div>
   </section>
 
   <!-- ================= FATURA MENSAL ================= -->
@@ -111,7 +159,7 @@
         <option value="12">Dezembro</option>
       </select>
 
-      <input id="faturaAno" type="number" value="2025">
+      <input id="faturaAno" type="number" placeholder="Ano">
 
       <button onclick="renderFatura()">Ver Fatura</button>
       <button onclick="gerarPDFfatura()">🧾 PDF</button>
@@ -123,7 +171,6 @@
       <thead>
         <tr>
           <th>Descrição</th>
-          <th>Parcela</th>
           <th>Valor</th>
         </tr>
       </thead>
@@ -136,7 +183,8 @@
 
   <!-- ================= LANÇAMENTOS ================= -->
   <section class="tabela">
-    <h2>📋 Lançamentos</h2>
+    <h2>📋 Todos os Lançamentos</h2>
+
     <table>
       <thead>
         <tr>
@@ -145,7 +193,7 @@
           <th>Descrição</th>
           <th>Valor</th>
           <th>Cartão</th>
-          <th>Ações</th>
+          <th>Ação</th>
         </tr>
       </thead>
       <tbody id="tabela"></tbody>
