--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-  <!-- jsPDF -->
+  <!-- jsPDF (para futuras expansões) -->
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 </head>
 
 <body>
 
+<!-- ================= HEADER ================= -->
 <header>
   <h1>💰 Controle Financeiro</h1>
   <button id="toggleTheme" class="theme-btn">🌙</button>
@@ -24,12 +25,37 @@
 
 <main>
 
+  <!-- ================= MÊS EM VIGÊNCIA ================= -->
+  <section class="input-section">
+    <h2>📅 Mês em Vigência</h2>
+
+    <div class="form">
+      <select id="mesAtivo">
+        <option value="1">Janeiro</option>
+        <option value="2">Fevereiro</option>
+        <option value="3">Março</option>
+        <option value="4">Abril</option>
+        <option value="5">Maio</option>
+        <option value="6">Junho</option>
+        <option value="7">Julho</option>
+        <option value="8">Agosto</option>
+        <option value="9">Setembro</option>
+        <option value="10">Outubro</option>
+        <option value="11">Novembro</option>
+        <option value="12">Dezembro</option>
+      </select>
+
+      <input id="anoAtivo" type="number" placeholder="Ano">
+      <button onclick="atualizarMesAtivo()">Aplicar</button>
+    </div>
+  </section>
+
   <!-- ================= CADASTRO DE CARTÕES ================= -->
   <section class="input-section">
     <h2>💳 Cadastro de Cartões</h2>
 
     <div class="form">
-      <input id="cartaoNome" placeholder="Nome do cartão (ex: Nubank)">
+      <input id="cartaoNome" placeholder="Nome do cartão">
       <input id="cartaoFechamento" type="number" min="1" max="31" placeholder="Dia de fechamento">
       <input id="cartaoVencimento" type="number" min="1" max="31" placeholder="Dia de vencimento">
       <button onclick="salvarCartao()">Salvar Cartão</button>
@@ -75,7 +101,7 @@
       <select id="compraCartao"></select>
       <input id="compraDescricao" placeholder="Descrição da compra">
       <input id="compraValor" type="number" placeholder="Valor total">
-      <input id="compraParcelas" type="number" placeholder="Qtd. parcelas">
+      <input id="compraParcelas" type="number" placeholder="Parcelas">
       <input id="compraMes" type="number" min="1" max="12" placeholder="Mês 1ª parcela">
       <input id="compraAno" type="number" placeholder="Ano 1ª parcela">
 
@@ -112,7 +138,7 @@
     </div>
   </section>
 
-  <!-- ================= GRÁFICOS ================= -->
+  <!-- ================= GRÁFICOS GERAIS ================= -->
   <section class="charts">
     <div class="chart-box">
       <canvas id="barChart" width="360" height="260"></canvas>
@@ -126,6 +152,7 @@
   <!-- ================= DASHBOARD DE CARTÕES ================= -->
   <section class="input-section">
     <h2>📊 Dashboard de Cartões</h2>
+
     <select id="cartaoDashboard">
       <option value="">Todos os cartões</option>
     </select>
@@ -160,9 +187,7 @@
       </select>
 
       <input id="faturaAno" type="number" placeholder="Ano">
-
       <button onclick="renderFatura()">Ver Fatura</button>
-      <button onclick="gerarPDFfatura()">🧾 PDF</button>
     </div>
 
     <h3 id="totalFatura">Total: R$ 0,00</h3>
@@ -171,19 +196,17 @@
       <thead>
         <tr>
           <th>Descrição</th>
+          <th>Parcela</th>
           <th>Valor</th>
         </tr>
       </thead>
       <tbody id="tabelaFatura"></tbody>
     </table>
-
-    <h3>📊 Timeline de Parcelas</h3>
-    <div id="timelineParcelas"></div>
   </section>
 
   <!-- ================= LANÇAMENTOS ================= -->
   <section class="tabela">
-    <h2>📋 Todos os Lançamentos</h2>
+    <h2>📋 Lançamentos do Mês</h2>
 
     <table>
       <thead>
@@ -214,6 +237,8 @@
   <p>Controle Financeiro • GitHub Pages</p>
 </footer>
 
+<!-- ================= SCRIPT ================= -->
 <script src="script.js"></script>
+
 </body>
 </html>
