--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
 
+<!-- ================= HEADER ================= -->
 <header>
   <h1>💰 Controle Financeiro</h1>
   <button id="toggleTheme" class="theme-btn">🌙</button>
@@ -71,14 +72,17 @@
       <h3>💼 Renda</h3>
       <p id="rendaEl">R$ 0,00</p>
     </div>
+
     <div class="card yellow">
       <h3>💛 Renda Extra</h3>
       <p id="rendaExtraEl">R$ 0,00</p>
     </div>
+
     <div class="card red">
       <h3>💸 Gastos</h3>
       <p id="gastosEl">R$ 0,00</p>
     </div>
+
     <div class="card green">
       <h3>💰 Sobra</h3>
       <p id="sobraEl">R$ 0,00</p>
@@ -115,10 +119,12 @@
     <h2>💳 Cartões</h2>
     <div class="form">
       <input id="cartaoNome" placeholder="Nome do cartão">
-      <input id="cartaoFechamento" type="number" min="1" max="31" placeholder="Fechamento">
-      <input id="cartaoVencimento" type="number" min="1" max="31" placeholder="Vencimento">
-      <button onclick="salvarCartao()">Salvar Cartão</button>
+      <input id="cartaoFechamento" type="number" min="1" max="31" placeholder="Dia de fechamento">
+      <input id="cartaoVencimento" type="number" min="1" max="31" placeholder="Dia de vencimento">
+      <button onclick="salvarCartao()">Salvar / Atualizar Cartão</button>
     </div>
+
+    <!-- Lista com botões Editar / Excluir (gerados pelo JS) -->
     <ul id="listaCartoes"></ul>
   </section>
 
@@ -186,7 +192,7 @@
     </table>
   </section>
 
-  <!-- ================= FATURA (ESTRUTURAL) ================= -->
+  <!-- ================= FATURA (ESTRUTURAL / OCULTA) ================= -->
   <section class="input-section" style="display:none">
     <select id="faturaCartao"></select>
   </section>
