--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <input id="cartaoNome" placeholder="Nome do cartão">
       <input id="cartaoFechamento" type="number" min="1" max="31" placeholder="Dia de fechamento">
       <input id="cartaoVencimento" type="number" min="1" max="31" placeholder="Dia de vencimento">
-      <button onclick="salvarCartao()">Salvar / Atualizar Cartão</button>
+      <button type="button" onclick="salvarCartao()">Salvar</button>
     </div>
 
     <!-- Lista com botões Editar / Excluir (gerados pelo JS) -->
@@ -207,3 +207,4 @@
 <script src="script.js" defer></script>
 </body>
 </html>
+
